# Public-Housing

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
assets/lh/: metadata.json
docs/: lh_crawler_design.md
examples/: parse_lh_pdf.py
src/crawlers/: README.md  lh_announcements.py
src/models/: __init__.py  document_structure.py
src/parsers/: README.md  __init__.py  hierarchy_parser.py  layout_analyzer.py  lh_pdf_parser.py  pdf_parser.py  table_extractor.py
tests/crawlers/: test_lh_announcements.py
tests/fixtures/: lh_detail_page.html  lh_list_page.html
tests/parsers/: __init__.py  test_lh_pdf_parser.py
